--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
 </head>
 
 <body>
-    <div id="img-row1">
-        <img src="de_gea.jpeg" id="0"/>
-        <img src="shaw.jpeg" id="1"/>
-        <img src="lindelof.jpeg" id="2"/>
-        <img src="bailly.jpeg" id="3"/>
-    </div>
-    <div id="img-row2">
-        <img src="young.jpeg" id="4"/>
-        <img src="martial.jpeg" id="5"/>
-        <img src="herrera.jpeg" id="6"/>
-        <img src="pogba.jpeg" id="7"/>
-    </div>
-    <div id="img-row3">
-        <img src="pereira.jpeg" id="8"/>
-        <img src="lingard.jpeg" id="9"/>
-        <img src="lukaku.jpeg" id="10"/>
-        <img src="rashford.jpeg" id="11"/>
+    <div id="content">
+        <div id="img-row1">
+            <img src="de_gea.jpeg" id="0" />
+            <img src="shaw.jpeg" id="1" />
+            <img src="lindelof.jpeg" id="2" />
+            <img src="bailly.jpeg" id="3" />
+        </div>
+        <div id="img-row2">
+            <img src="young.jpeg" id="4" />
+            <img src="martial.jpeg" id="5" />
+            <img src="herrera.jpeg" id="6" />
+            <img src="pogba.jpeg" id="7" />
+        </div>
+        <div id="img-row3">
+            <img src="pereira.jpeg" id="8" />
+            <img src="lingard.jpeg" id="9" />
+            <img src="lukaku.jpeg" id="10" />
+            <img src="rashford.jpeg" id="11" />
+        </div>
     </div>
     <div id="img-big">
-        
+
     </div>
     <script src="main.js"></script>
 </body>
+
 </html>
